Дополнения к записи таблеткам

--- a/app/src/main/res/layout/fragment_add_medicines.xml
+++ b/app/src/main/res/layout/fragment_add_medicines.xml
@@ -396,6 +396,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:imeOptions="actionDone"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
