--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -92,7 +92,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:text="@string/no_nearest_act"
+                    android:hint="@string/no_nearest_act"
+                    android:textColor="@color/textcolor_unchoosen"
                     app:layout_constraintBottom_toBottomOf="@id/statusBox"
                     app:layout_constraintStart_toStartOf="@id/statusBox"
                     app:layout_constraintTop_toTopOf="@id/statusBox" />
