--- a/app/src/main/res/layout/fragment_add_heart_item.xml
+++ b/app/src/main/res/layout/fragment_add_heart_item.xml
@@ -4,17 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.heartFragment"
+    tools:context=".ui.AddHeartItemFragment"
     android:background="@drawable/background">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:fillViewport="true">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:fillViewport="true"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -57,68 +58,138 @@
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
                 app:layout_constraintTop_toTopOf="@id/wentBack"
                 app:layout_constraintBottom_toBottomOf="@id/wentBack"
-                android:text="@string/cardio"
+                android:text="@string/history"
                 />
 
             <TextView
                 style="@style/zagalovok1"
-                android:id="@+id/lastNoteTitle"
+                android:id="@+id/pressureTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="@id/margin_main"
                 app:layout_constraintTop_toBottomOf="@id/wentBack"
                 android:layout_marginTop="15dp"
-                android:text="@string/lastNote"
+                android:text="@string/pressure"
                 />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/upPressureBoxLayout"
                 android:layout_width="0dp"
-                android:layout_height="300dp"
+                android:layout_height="60dp"
                 app:layout_constraintStart_toStartOf="@id/margin_main"
-                app:layout_constraintEnd_toEndOf="@id/margin_main2"
-                app:layout_constraintTop_toBottomOf="@id/lastNoteTitle"
+                app:layout_constraintEnd_toStartOf="@id/downPressureBoxLayout"
+                app:layout_constraintTop_toBottomOf="@id/pressureTitle"
+                android:layout_marginEnd="5dp"
                 android:layout_marginTop="10dp"
                 >
 
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/recyclerCardView"
+            <EditText
+                style="@style/hint1"
+                android:id="@+id/upPressureBox"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/box"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:hint="@string/up_pressure"
+                android:gravity="center_vertical"
+                android:padding="15dp"
+                />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/downPressureBoxLayout"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                app:layout_constraintStart_toEndOf="@id/upPressureBoxLayout"
+                app:layout_constraintEnd_toStartOf="@id/pulseBoxLayout"
+                app:layout_constraintTop_toTopOf="@id/upPressureBoxLayout"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="5dp"
+                >
+
+                <EditText
+                    style="@style/hint1"
+                    android:id="@+id/downPressureBox"
                     android:layout_width="0dp"
-                    android:layout_height="300dp"
+                    android:layout_height="0dp"
+                    android:background="@drawable/box"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:clipToPadding="true"
-                    app:cardCornerRadius="15dp"
+                    android:hint="@string/down_pressure"
+                    android:gravity="center_vertical"
+                    android:padding="15dp"
                     />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    tools:listitem="@layout/heart_item"
-                    android:id="@+id/heartRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/recyclerCardView"
-                    app:layout_constraintEnd_toEndOf="@id/recyclerCardView"
-                    app:layout_constraintTop_toTopOf="@id/recyclerCardView"
-                    app:layout_constraintBottom_toBottomOf="@id/recyclerCardView"
-                    app:layout_constraintVertical_bias="0"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginEnd="2dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginBottom="2dp"
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/pulseBoxLayout"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                app:layout_constraintStart_toEndOf="@id/downPressureBoxLayout"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
+                app:layout_constraintTop_toTopOf="@id/downPressureBoxLayout"
+                android:layout_marginStart="5dp"
+                >
+
+                <EditText
+                    style="@style/hint1"
+                    android:id="@+id/pulseBox"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@drawable/box"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:hint="@string/pulse"
+                    android:gravity="center_vertical"
+                    android:padding="15dp"
                     />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                style="@style/zagalovok1"
+                android:id="@+id/dateAndTimeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/margin_main"
+                app:layout_constraintTop_toBottomOf="@id/upPressureBoxLayout"
+                android:layout_marginTop="10dp"
+                android:text="@string/dateAndTime"
+                />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/dateAndTimeBoxLayout"
+                android:layout_width="0dp"
+                android:layout_height="65dp"
+                app:layout_constraintStart_toStartOf="@id/margin_main"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
+                app:layout_constraintTop_toBottomOf="@id/dateAndTimeTitle"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="10dp"
+                >
 
                 <TextView
-                    style="@style/zagalovok2"
-                    android:id="@+id/nothingThere"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/hint1"
+                    android:id="@+id/dateAndTimeText"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="@string/notNoteYet"
-                    android:visibility="gone"
+                    android:background="@drawable/box"
+                    android:hint="@string/ChooseTimeAndDate"
+                    android:gravity="center_vertical"
+                    android:padding="15dp"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -154,7 +225,7 @@
                     app:layout_constraintEnd_toEndOf="@id/saveHeartItemBtn"
                     app:layout_constraintTop_toTopOf="@id/saveHeartItemBtn"
                     app:layout_constraintBottom_toBottomOf="@id/saveHeartItemBtn"
-                    android:text="@string/add"
+                    android:text="@string/save"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
