Исправил баг с темой, улучшил ux в AddHeartItemFragment, подготовил приложение к обновлению

--- a/app/src/main/res/layout/fragment_add_heart_item.xml
+++ b/app/src/main/res/layout/fragment_add_heart_item.xml
@@ -96,6 +96,7 @@
                 android:hint="@string/up_pressure"
                 android:gravity="center_vertical"
                 android:padding="15dp"
+                android:inputType="number"
                 />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -124,6 +125,7 @@
                     android:hint="@string/down_pressure"
                     android:gravity="center_vertical"
                     android:padding="15dp"
+                    android:inputType="number"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -151,6 +153,7 @@
                     android:hint="@string/pulse"
                     android:gravity="center_vertical"
                     android:padding="15dp"
+                    android:inputType="number"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
