--- a/app/src/main/res/layout/fragment_main_1.xml
+++ b/app/src/main/res/layout/fragment_main_1.xml
@@ -172,39 +172,69 @@
             android:background="@drawable/box"
             />
 
-            <TextView
-                android:id="@+id/cardioTitle"
-                style="@style/zagalovok1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="@string/cardio"
-                android:layout_marginTop="7dp"
-                android:layout_marginStart="7dp"
-                />
+        <TextView
+            android:id="@+id/cardioTitle"
+            style="@style/zagalovok1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/cardio"
+            android:layout_marginTop="7dp"
+            android:layout_marginStart="7dp"
+            />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/heart_icon"
-                android:layout_marginEnd="7dp"
-                android:layout_marginTop="7dp"
-                />
+        <ImageView
+            android:id="@+id/heartIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/heart_icon"
+            android:layout_marginEnd="7dp"
+            android:layout_marginTop="7dp"
+            />
 
-            <TextView
-                style="@style/zagalovok1"
-                android:id="@+id/daylyCardio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/cardioTitle"
-                app:layout_constraintTop_toTopOf="@id/cardioTitle"
-                app:layout_constraintBottom_toBottomOf="@id/kardioBox"
-                app:layout_constraintVertical_bias="0.65"
-                android:text="0/0"
-                />
+        <TextView
+            style="@style/zagalovok1"
+            android:id="@+id/upPressureText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/cardioTitle"
+            app:layout_constraintTop_toTopOf="@id/cardioTitle"
+            app:layout_constraintBottom_toBottomOf="@id/kardioBox"
+            app:layout_constraintEnd_toStartOf="@id/downPressureText"
+            app:layout_constraintVertical_bias="0.65"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            android:text="\ ?"
+            android:drawableBottom="@drawable/arrow_up_24x24"
+            />
+
+        <TextView
+            style="@style/zagalovok1"
+            android:id="@+id/downPressureText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/upPressureText"
+            app:layout_constraintTop_toTopOf="@id/upPressureText"
+            app:layout_constraintBottom_toBottomOf="@id/upPressureText"
+            app:layout_constraintEnd_toStartOf="@id/pulseText"
+            android:text="\ ?"
+            android:drawableBottom="@drawable/arrow_down_24x24"
+            />
+
+        <TextView
+            style="@style/zagalovok1"
+            android:id="@+id/pulseText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/downPressureText"
+            app:layout_constraintTop_toTopOf="@id/downPressureText"
+            app:layout_constraintBottom_toBottomOf="@id/downPressureText"
+            app:layout_constraintEnd_toStartOf="@id/heartIcon"
+            android:text="\ ?"
+            android:drawableBottom="@drawable/pulse_24x24"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
