--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.weightFragment"
+    tools:context=".ui.weight.weightFragment"
     android:background="@drawable/background"
     >
 
@@ -55,6 +55,16 @@
                 app:layout_constraintTop_toTopOf="@id/wentBack"
                 app:layout_constraintBottom_toBottomOf="@id/wentBack"
                 android:text="@string/weight"
+                />
+
+            <ImageButton
+                android:id="@+id/historyBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@id/margin_main2"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/history_56x56"
                 />
 
             <TextView
