--- a/app/src/main/res/layout/dialog_edit_weight_history.xml
+++ b/app/src/main/res/layout/dialog_edit_weight_history.xml
@@ -24,7 +24,9 @@
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="numberDecimal"
+            android:hint="@string/inputNewValue"
+            android:maxLength="6"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
