--- a/app/src/main/res/layout/fragment_add_heart_item.xml
+++ b/app/src/main/res/layout/fragment_add_heart_item.xml
@@ -97,6 +97,7 @@
                 android:gravity="center_vertical"
                 android:padding="15dp"
                 android:inputType="number"
+                android:imeOptions="actionNext"
                 />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -126,6 +127,7 @@
                     android:gravity="center_vertical"
                     android:padding="15dp"
                     android:inputType="number"
+                    android:imeOptions="actionNext"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
