--- a/app/src/main/res/layout/fragment_add_medicines.xml
+++ b/app/src/main/res/layout/fragment_add_medicines.xml
@@ -14,8 +14,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:overScrollMode="never"
         android:fillViewport="true">
-        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
